--- a/style/speciesPanel.css
+++ b/style/speciesPanel.css
@@ -1,1 +1,20 @@
 @import url(https://ydarissep.github.io/dex-core/style/speciesPanel.css);
+
+.speciesPanelLearnsetsEffect {
+	font-size: min(max(2vw, 13px), 16px) !important;
+}
+
+@media 
+only screen and (max-width: 650px) {
+	#speciesPanelMainContainer {
+		max-width: revert !important;
+		border: none !important;
+	}
+}
+
+@media 
+only screen and (max-width: 600px) {
+	.speciesPanelLearnsetsEffect {
+		display: none;
+	}
+}
