--- a/style/locationsTable.css
+++ b/style/locationsTable.css
@@ -1,1 +1,45 @@
 @import url(https://ydarissep.github.io/dex-core/style/locationsTable.css);
+
+.methodTable {
+    width: 20%;
+}
+
+
+@media 
+only screen and (max-width: 1200px) {
+    .locationSpeciesRow {
+        font-size: 16px !important;
+    }
+
+    .locationRarity {
+        font-size: 14px !important;
+    }
+}
+
+@media 
+only screen and (max-width: 1050px) {
+    .methodTable {
+        width: 25% !important;
+    }
+}
+
+@media 
+only screen and (max-width: 875px) {
+    .methodTable {
+        width: 33% !important;
+    }
+}
+
+@media 
+only screen and (max-width: 675px) {
+    .methodTable {
+        width: 50% !important;
+    }
+}
+
+@media 
+only screen and (max-width: 450px) {
+    .methodTable {
+        width: 100% !important;
+    }
+}
