--- a/style/locationsTable.css
+++ b/style/locationsTable.css
@@ -1,63 +1,122 @@
-@import url(https://ydarissep.github.io/dex-core/style/locationsTable.css);
+.locationTable {
+    display: block !important;
+	margin-bottom: 100px;
+    width: 750px;
+}
+
+.locationTableThead {
+    display: inline-block !important;
+    background: none;
+}
+
+.locationTableTbody {
+    width: 100%;
+    display: inline-table !important;
+}
 
 .methodTable {
-    max-width: 250px;
+    border: 2px solid rgba(85, 85, 85);
+    width: 250px;
+    font-weight: 700;
+    box-sizing: border-box;
+    display: inline-block !important;
+    height: 100%;
+    margin: 0px 50px 0px 50px;
+}
+
+.methodTableThead {
+	font-weight: 700;
+	cursor: default !important;
+    width: 100%;
+    display: inline-table !important;
+    font-size: 25px;
+}
+
+.methodTableTbody, .rarityTable {
+    width: 100%;
+    display: table !important;
+}
+
+.rarityTableThead {
+    display: table-caption;
+    font-size: 30px;
+}
+
+#locationsTable table, #locationsTable {
+	box-shadow: none !important;
+}
+
+#locationsTable .miniSprite3 {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.locationSpeciesRow:hover {
+    background: rgba(255, 255, 255, 0.2) !important;
+    cursor: pointer;
+}
+
+.locationSpriteContainer .miniSprite3 {
+    width: 42px;
+    height: 42px;
+}
+
+.locationSprite {
+    width: 42px;
+    height: 42px;
+    image-rendering: pixelated;
 }
 
 .locationRarity {
-    font-size: 15px !important;
+    padding-left: 5px;
+    font-size: 17px !important;
 }
 
-@media only screen and (max-width: 1125px) {
-    .locationSpriteContainer {
-      width: 65% !important;
+#locationsTable .Day, #locationsTable .Dawn {
+    color: #e1e17099;
+}
+
+#locationsTable .Night, #locationsTable .Dusk {
+    color: #beabffc2;
+}
+
+@media 
+only screen and (max-width: 800px) {
+    .locationTable {
+        width: 500px !important;
     }
 
-    .locationScale .locationSpriteContainer {
-        width: 100% !important;
-    }
-    .locationScale .locationSpeciesName {
-        display: none;
-    }
-
-    .locationScale .locationSpeciesName {
-        display: none;
-    }
-
-    .locationScale .locationSpeciesNameHidden {
-        display: block !important;
-        font-size: 15px;
-    }
-}  
-
-@media only screen and (max-width: 800px) {
-    .locationScale .locationRarity {
-        display: none;
-    }
-
-    .locationScale .locationRarityHidden {
-        display: block !important;
-    }
-
-    .locationScale .locationSpeciesNameHidden {
-        display: none !important;
+    .methodTable {
+        width: 50% !important;
+        margin: 0px !important;
     }
 }
 
 @media 
-only screen and (max-width: 550px) {
-    .locationSpeciesNameHidden, .locationRarity {
-        font-size: 12px !important;
+only screen and (max-width: 515px) {
+    .locationTable {
+        width: unset !important;
     }
 
-    .methodTableThead {
-        height: unset !important;
+    #locationsTable {
+        width: 100%;
+    }
+}
+
+@media 
+only screen and (max-width: 500px) {
+    .locationSpeciesName, .timeOfDay {
+        font-size: 15px !important;
     }
 }
 
 @media 
 only screen and (max-width: 350px) {
-    .locationSpeciesNameHidden, .locationRarity {
-        font-size: 11px !important;
+    .rarityTableThead {
+        font-size: 25px !important;
+    }
+
+    .locationSpeciesName {
+        font-size: 13px !important;
     }
 }
