--- a/style/speciesPanel.css
+++ b/style/speciesPanel.css
@@ -41,6 +41,12 @@
 	text-align: left !important;
 }
 
+#speciesPanelBiomesContainer.minimizeBiomes > div {
+	padding-top: 0px !important;
+	padding-bottom: 0px !important;
+	font-size: 13px;
+}
+
 tbody .speciesPanelLearnsetsEffect {
 	font-size: 17px !important;
 	height: 50px;
