--- a/style/locationsTable.css
+++ b/style/locationsTable.css
@@ -138,6 +138,10 @@
     color: #beabffc2;
 }
 
+.scrollIntoViewLocationFocus {
+    border: 2px solid var(--theme-color) !important;
+}
+
 @media 
 only screen and (max-width: 800px) {
     .locationTable {
