--- a/style/speciesTable.css
+++ b/style/speciesTable.css
@@ -1,5 +1,10 @@
 @import url(https://ydarissep.github.io/dex-core/style/speciesTable.css);
 
+#speciesTableThead th.baseHP, #speciesTableThead th.baseAttack, #speciesTableThead th.baseDefense, #speciesTableThead th.baseSpAttack, #speciesTableThead th.baseSpDefense, #speciesTableThead th.baseSpeed, #speciesTableThead th.BST {
+	width: unset !important;
+	padding: 5px 10px 5px 10px !important;
+}
+
 .starterAbility {
 	font-weight: bold;
 	color: #f4f000f2;
