--- a/style.css
+++ b/style.css
@@ -8,3 +8,67 @@ body.zh_CN [class*="TYPE_"], body.ko [class*="TYPE_"], body.zh_TW [class*="TYPE_
     font-size: 15px !important;
     padding-bottom: 4px !important;
 }
+
+#abilitiesButton {
+    margin-left: 20px;
+}
+
+#langMenu {
+    display: inline-table;
+}
+
+#langMenu:hover ul {
+    display: block;
+}
+
+#langMenu img {
+    width: 50px;
+    vertical-align: middle;
+}
+
+.selectedLangContainer {
+    border: 1px solid dimgray;
+    background-color: black;
+    border-radius: 5px;
+    padding: 3px;
+    margin-top: 10px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#langMenu ul {
+    margin: 0px;
+    padding: 0px;
+    background-color: #252525;
+    border: 1px solid #f8f8f8;
+    position: absolute;
+    z-index: 10;
+    box-shadow: 0px 1px 10px rgba(255, 255, 255, 0.15);
+    border-radius: 5px;
+    display: none;
+}
+
+#langMenu li img {
+    padding: 8px 10px 8px 10px;
+}
+
+#langMenu li span {
+    padding-right: 20px;
+    font-size: 22px !important;
+}
+
+#langMenu li {
+    text-align: left;
+    list-style: none;
+    font-family: 'Pragati Narrow', 'Roboto Condensed', Arial, sans-serif;
+    cursor: pointer;
+}
+
+#langMenu li:hover {
+    background: rgba(255, 255, 255, 0.35);
+}
+
+.selectedLangFlag {
+    filter: brightness(75%);
+    width: 36px !important;
+}
