--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ body.zh_CN [class*="TYPE_"], body.ko [class*="TYPE_"], body.zh_TW [class*="TYPE_
     padding-bottom: 4px !important;
 }
 
+@media only screen and (max-width: 500px) {
+    body.zh_CN #speciesPanelContainer .backgroundSmall[class*="TYPE_"], body.ko #speciesPanelContainer .backgroundSmall[class*="TYPE_"], body.zh_TW #speciesPanelContainer .backgroundSmall[class*="TYPE_"] {
+        font-size: 10px !important;
+        letter-spacing: -0.3px !important;
+    }
+}
+
 #abilitiesButton {
     margin-left: 20px;
 }
@@ -22,7 +29,7 @@ body.zh_CN [class*="TYPE_"], body.ko [class*="TYPE_"], body.zh_TW [class*="TYPE_
 }
 
 #langMenu:hover ul {
-    display: block;
+    display: block !important;
 }
 
 #langMenu img {
